manifests/base/redis-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: beatwave-redis
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beatwave-redis
  template:
    metadata:
      labels:
        app: beatwave-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
