manifests/base/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: beatwave-frontend
spec:
  selector:
    app: beatwave-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
