manifests/base/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beatwave-mongodb
  namespace: beatwave
spec:
  type: ClusterIP
  clusterIP: None 
  selector:
    app: beatwave-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
      name: mongodb
