manifests/base/redis-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: beatwave-redis
  namespace: beatwave
spec:
  selector:
    app: beatwave-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
